<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="380dp"
        android:layout_height="201dp"
        android:layout_marginBottom="366dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="204dp"
            android:layout_height="153dp"
            android:layout_marginBottom="21dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:contentDescription="@string/todo"
            app:layout_constrainedHeight="false"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="66dp"
            android:layout_height="34dp"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="87dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="87dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="27dp"
            android:text="@string/hay"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="133dp"
            android:layout_height="33dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="7dp"
            android:text="@string/white_chair"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="6dp"
            android:text="@string/purchase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="Purchase" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginBottom="24dp"
            android:text="@string/very_white"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="Very White" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="383dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="52dp"
            android:layout_height="65dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="51dp"
            android:layout_marginRight="51dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="83dp"
            android:layout_height="17dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="140dp"
            android:layout_marginRight="140dp"
            android:text="@string/_120_on_hand"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="120 on Hand" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="155dp"
            android:layout_marginRight="155dp"
            android:layout_marginBottom="14dp"
            android:text="@string/stocks_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:text="Stocks left" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="383dp"
        android:layout_height="71dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="54dp"
            android:layout_height="44dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="14dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/prc" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="186dp"
            android:layout_marginRight="186dp"
            android:layout_marginBottom="16dp"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Price" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="385dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="73dp"
            android:layout_height="47dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clk" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="113dp"
            android:layout_marginRight="113dp"
            android:layout_marginBottom="2dp"
            android:text="@string/sale_until_october_15"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="Sale until october 15" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="112dp"
            android:layout_height="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="119dp"
            android:layout_marginRight="119dp"
            android:layout_marginBottom="19dp"
            android:text="@string/limited_offer_only"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:text="Limited Offer only" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="382dp"
        android:layout_height="77dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="91dp"
            android:layout_height="61dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dlvr" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="119dp"
            android:layout_marginRight="119dp"
            android:layout_marginBottom="42dp"
            android:text="@string/_7_10_days_delivery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="7 - 10 days Delivery" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="16dp"
        android:text="@string/_189_99"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintVertical_bias="0.0"
        tools:text="$189.99" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="388dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            android:layout_marginBottom="16dp"
            android:text="@string/in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="IN" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            android:layout_marginBottom="16dp"
            android:text="@string/out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="OUT" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>